# CHW2

./: CMakeLists.txt  README.md  main.cpp  Отчёт.ipynb
Containers/: KMPTestContainer.cpp  KMPTestContainer.h  NaiveSearchTestContainer.cpp  NaiveSearchTestContainer.h  TestCaseContainer.cpp  TestCaseContainer.h
Logs/: BaseKMP_Results.csv  CoolKMP_Results.csv  NaiveSearch_Results.csv
Testing/: TestingManager.cpp  TestingManager.h  Utils.cpp  Utils.h
